# nntest

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  gen.h  gen_mnist.h  io.cpp  io.h  mnist.cpp  mnist.s  mnist.t  netgen.cpp  netgen.t  xor.cpp  xor.t  xor_gen.cpp  xor_gen.t
